[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "cert_exp_check"
version = "1.0.0"
description = "Read the latest Real Python tutorials"
readme = "README.md"
authors = [{ name = "qf3l3k", email = "qf3l3k@chaintools.tech" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["certificate", "check", "monitoring"]
dependencies = [
    'build==0.8.0',
    'colorama==0.4.5',
    'packaging==21.3',
    'pep517==0.13.0',
    'prettytable==3.4.1',
    'pyparsing==3.0.9',
    'tomli==2.0.1',
    'wcwidth==0.2.5'
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/ChainTools-Tech/cert_expiry_checker"

[project.scripts]
cert_exp_check = "cert_exp_check.__main__:main"
